==> Embedfire-stm32f407-batianhu/ebf_stm32f407_batianhu_hal_code/I2C—AP3216C（光照三合一）/User/ap3216c/ap3216c.c <==
#include "./ap3216c/ap3216c.h"
#include "./i2c/bsp_i2c.h"
#define PKG_USING_AP3216C
#define AP3216C_SYS_CONFIGURATION_REG 0x00 //default
#define AP3216C_SYS_INT_STATUS_REG 0x01
#define AP3216C_SYS_INT_CLEAR_MANNER_REG 0x02
#define AP3216C_IR_DATA_L_REG 0x0A
#define AP3216C_IR_DATA_H_REG 0x0B
#define AP3216C_ALS_DATA_L_REG 0x0C
#define AP3216C_ALS_DATA_H_REG 0x0D
#define AP3216C_PS_DATA_L_REG 0x0E
#define AP3216C_PS_DATA_H_REG 0x0F
#define AP3216C_ALS_CONFIGURATION_REG 0x10 //range 5:4,persist 3:0
#define AP3216C_ALS_CALIBRATION_REG 0x19
#define AP3216C_ALS_THRESHOLD_LOW_L_REG 0x1A  //bit 7:0
#define AP3216C_ALS_THRESHOLD_LOW_H_REG 0x1B  //bit 15:8
#define AP3216C_ALS_THRESHOLD_HIGH_L_REG 0x1C //bit 7:0
#define AP3216C_ALS_THRESHOLD_HIGH_H_REG 0x1D //bit 15:8
#define AP3216C_PS_CONFIGURATION_REG 0x20
#define AP3216C_PS_LED_DRIVER_REG 0x21
#define AP3216C_PS_INT_FORM_REG 0x22
#define AP3216C_PS_MEAN_TIME_REG 0x23
#define AP3216C_PS_LED_WAITING_TIME_REG 0x24
#define AP3216C_PS_CALIBRATION_L_REG 0x28
#define AP3216C_PS_CALIBRATION_H_REG 0x29
#define AP3216C_PS_THRESHOLD_LOW_L_REG 0x2A  //bit 1:0
#define AP3216C_PS_THRESHOLD_LOW_H_REG 0x2B  //bit 9:2
#define AP3216C_PS_THRESHOLD_HIGH_L_REG 0x2C //bit 1:0
#define AP3216C_PS_THRESHOLD_HIGH_H_REG 0x2D //bit 9:2
#define AP3216C_ADDR 0x1e /*0x3c=0x1e<<1*/ // AP3216C 的 7 位地址

static void write_reg(uint8_t reg, uint8_t data)
{
  
  HAL_I2C_Mem_Write(&I2C_Handle, AP3216C_ADDR << 1, reg, I2C_MEMADD_SIZE_8BIT, &data, 1, 100);
  
}

static void read_regs(uint8_t reg, uint8_t len, uint8_t *buf)
{
  
  HAL_I2C_Mem_Read(&I2C_Handle, AP3216C_ADDR << 1, reg, I2C_MEMADD_SIZE_8BIT, buf, len, 100);
  
}

static void ap3216c_int_init(void)
{ 
    ap3216c_threshold_t threshold;    // 设置报警值阈值结构体
  
    threshold.min = 100;     // 光照下限产生报警
    threshold.max = 1000;    // 光照上限产生报警
    threshold.noises_time = 1;    // ALS 达到阈值后持续 threshold.noises_time * 4 个周期后开始报警， threshold.noises_time 最大为； 15
    set_als_threshold(AP3216C_ALS_LOW_THRESHOLD_L, threshold);    // 设置 ALS 的报警值
  
  
    threshold.min = 120;    // PS 低于 200 产生报警
    threshold.max = 600;    // PS 高于 500 产生报警
    set_ps_threshold(AP3216C_PS_LOW_THRESHOLD_L, threshold);     // 设置 PS 的报警值
}

void ap3216c_init(void)
{
    I2C_Mode_Config();

    /* reset ap3216c */
    reset_sensor();
    HAL_Delay(100);
    ap3216c_set_param(AP3216C_SYSTEM_MODE, AP3216C_MODE_ALS_AND_PS);
    HAL_Delay(100); // delay at least  100ms

    /* 配置中断脚 和 中断数据	*/
    AP_INT_Config();
    ap3216c_int_init();
}
